--- a/k-main/src/main/resources/templates/root/index.html
+++ b/k-main/src/main/resources/templates/root/index.html
@@ -134,19 +134,19 @@
                 </div>
             </div>
         </div>
-        <div class="layui-col-md6">
-            <div class="layui-card">
-                <div class="layui-card-header">
-                    <a href="https://blog.xiaokui.site/blog/good-looking-hk/user?name=%E7%AE%80%E5%8E%86" title="完整版简历" target="_blank">完整版简历</a>
-                </div>
-                <div class="layui-card-body">
-                    <p class="p2">麻烦 您 了，这是 <a href="https://blog.xiaokui.site/blog/good-looking-hk/user?name=%E7%AE%80%E5%8E%86" title="完整版简历" target="_blank">完整版简历</a>，
-                        这是之前的 <a href="https://blog.xiaokui.site/blog/good-looking-hk/user?name=%E7%AE%80%E5%8E%86" title="简易版简历" target="_blank">简易版简历</a>。
-                    </p>
-                    <p class="p2">茫茫人海，相逢即是缘，真的很希望将来有机会能与 您 共事，感谢阅读，谢谢！</p>
-                </div>
-            </div>
-        </div>
+<!--        <div class="layui-col-md6">-->
+<!--            <div class="layui-card">-->
+<!--                <div class="layui-card-header">-->
+<!--                    <a href="https://blog.xiaokui.site/blog/good-looking-hk/user?name=%E7%AE%80%E5%8E%86" title="完整版简历" target="_blank">完整版简历</a>-->
+<!--                </div>-->
+<!--                <div class="layui-card-body">-->
+<!--                    <p class="p2">麻烦 您 了，这是 <a href="https://blog.xiaokui.site/blog/good-looking-hk/user?name=%E7%AE%80%E5%8E%86" title="完整版简历" target="_blank">完整版简历</a>，-->
+<!--                        这是之前的 <a href="https://blog.xiaokui.site/blog/good-looking-hk/user?name=%E7%AE%80%E5%8E%86" title="简易版简历" target="_blank">简易版简历</a>。-->
+<!--                    </p>-->
+<!--                    <p class="p2">茫茫人海，相逢即是缘，真的很希望将来有机会能与 您 共事，感谢阅读，谢谢！</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
     </div>
 </div>
 
@@ -157,7 +157,7 @@
             <a href="https://blog.xiaokui.site/web/log?key=199710" target="_blank">本网站日志</a>、
             <a href="https://hb.xiaokui.site/">后备:https://hb.xiaokui.site</a>
         </p>
-        <p style="margin-top: 5px;"> <a>佛系少年，在线随缘，每周一大更</a></p>
+        <p style="margin-top: 5px;"> <a>佛系少年，在线随缘，每周一更，QQ467914950</a></p>
     </div>
     <div class="bottomDiv">
         <a href="http://www.beian.miit.gov.cn">湘ICP备17005816号</a>
