--- a/k-blog/src/main/resources/templates/blog/_common_nav.html
+++ b/k-blog/src/main/resources/templates/blog/_common_nav.html
@@ -60,7 +60,7 @@
 @}
 <div id="aplayer"></div>
 <div style="padding-top: 20px;padding-bottom:10px;clear: both">
-    <center>公开博客 ${site.xiaokui.user.pub} 篇，非公开博客 ${site.xiaokui.user.pro} 篇，Since 2017-2020，All Right Reserved</center>
+    <center>公开博客 ${user.pub} 篇，非公开博客 ${user.pro} 篇，Since 2017-2020，All Right Reserved</center>
     <center><a href="http://www.beian.miit.gov.cn">湘ICP备17005816号</a></center>
 </div>
 <script src="${ctxPath}/lib/jquery/jquery.min.js"></script>
