优化前端模块化路由，以及jenkins自动打包

--- a/k-new-blog/eladmin-system/src/main/resources/templates/blog/_header.html
+++ b/k-new-blog/eladmin-system/src/main/resources/templates/blog/_header.html
@@ -28,7 +28,7 @@
         </ul>
         <div class="layui-form" id="nav-search">
             <div style="width: 100%; margin: auto 0;">
-                <input type="text" name="key" id="key" autocomplete="off" placeholder="快速搜索 如多线程"
+                <input type="text" name="key" id="key" autocomplete="off" placeholder="智能搜索 如多线程/2020"
                        class="layui-input search" style="width:70%;margin-left: 4%">
                 <button class="layui-btn layui-btn-primary search" onclick="search()" style="width: 22%">
                     搜索
