--- a/k-new-blog/eladmin-system/src/main/resources/templates/blog/_header.html
+++ b/k-new-blog/eladmin-system/src/main/resources/templates/blog/_header.html
@@ -14,6 +14,8 @@
         .main-container {
             padding: 10px 4% 15px 9.5%;
         }
+        .layui-nav .layui-nav-item {
+        }
     </style>
 </head>
 <body>
@@ -45,6 +47,7 @@
                     <dd><a href="javascript:void(0);" onclick="dealClick('layout', 'dir');">按目录</a></dd>
                 </dl>
             </li>
+            @if (isNotEmpty(project)) {
             <li class="layui-nav-item">
                 <a href="javascript:;">项目演示</a>
                 <dl class="layui-nav-child">
@@ -55,6 +58,7 @@
                     <dd><a href="/admin/login" target="_blank">Flink</a></dd>
                 </dl>
             </li>
+            @}
             <li class="layui-nav-item"><a href="javascript:void(0);" onclick="dealClick('type', 'pro');">非公开</a></li>
             @if (isNotEmpty(about)) {
             <li class="layui-nav-item" style="margin-left:-12px;"><a href="${ctxPath}/blog/${user.blogSpace}/user?name=关于" target="_blank">关于</a></li>
