--- a/k-new-blog/eladmin-system/src/main/resources/templates/blog/blog.html
+++ b/k-new-blog/eladmin-system/src/main/resources/templates/blog/blog.html
@@ -7,21 +7,21 @@
             <span class="next-blog"><a href='${ctxPath}${user.blog.nextBlog!"#"}'>下一篇:${user.blog.nextBlogTitle!"本系列完"}</a></span>
         </div>
         <div class="panel-body">
-            <p id="countChars" style="font-size: 14px;color: #777777;"></p>
+            <p id="countChars" style="font-size: 14px;color: #777777;">${user.blog.characterCount}</p>
             @printFile("blog:" + user.blog.filePath + ".html");
-            @if(isNotEmpty(user.blog.createTime) && isNotEmpty(user.blog.updateTime)) {
+            @if(isNotEmpty(user.blog.blogDate) && isNotEmpty(user.blog.updateTime)) {
             <blockquote>
                 <small>
                     总访问次数:${user.blog.viewCount!"1"} 次，${user.name} 创建于
-                    ${user.blog.createTime, "yyyy-MM-dd"}，最近更新于
+                    ${user.blog.blogDate}，最近更新于
                     ${user.blog.updateTime, "yyyy-MM-dd"}
                 </small>
             </blockquote>
-            @} else if (isNotEmpty(user.blog.createTime)) {
+            @} else if (isNotEmpty(user.blog.blogDate)) {
             <blockquote>
                 <small>
                     总访问次数:${user.blog.viewCount!"1"}，${user.name} 创建于
-                    ${user.blog.createTime, dateFormat="yyyy-MM-dd"}
+                    ${user.blog.createTime}
                 </small>
             </blockquote>
             @}
