优化博客显示

--- a/k-new-blog/eladmin-system/src/main/resources/templates/blog/_header.html
+++ b/k-new-blog/eladmin-system/src/main/resources/templates/blog/_header.html
@@ -16,6 +16,12 @@
         }
         .layui-nav .layui-nav-item {
         }
+        .hljs-comment,
+        .hljs-quote {
+            /*color: #5B995B;*/
+            color: greenyellow;
+            /*font-style: italic;*/
+        }
     </style>
 </head>
 <body>
