--- a/k-new-blog/eladmin-system/src/main/resources/templates/blog/_header.html
+++ b/k-new-blog/eladmin-system/src/main/resources/templates/blog/_header.html
@@ -22,6 +22,9 @@
             color: greenyellow;
             /*font-style: italic;*/
         }
+        #canvas-container {
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
