--- a/k-new-blog/eladmin-system/src/main/resources/templates/blog/_common_nav.html
+++ b/k-new-blog/eladmin-system/src/main/resources/templates/blog/_common_nav.html
@@ -58,6 +58,17 @@
     </ul>
 </div>
 @}
+@if (isNotEmpty(dirs!null)) {
+<div class="right-nav hid" style="left:5%;padding-bottom:2px;top: auto;bottom: 250px !important;">
+    <div id="canvas-container" style="float: left">
+        <canvas id="canvas" height="300px"></canvas>
+    </div>
+<!--    <p>分类导航</p>-->
+<!--    <a href="/" style="font-size: 12px;color: red">Spring源码(1)</a> <a href="/" style="font-size: 11px;color: fuchsia">Java虚拟机(4)</a> <a href="/" style="font-size: 20px;color: blue">Java基础(6)</a>-->
+<!--    <a href="/" style="font-size: 14px;color: greenyellow">设计模式(2)</a> <a href="/" style="font-size: 13px;color: blue">Spring(5)</a> <a href="/" style="font-size: 18px;color: blue">人生篇(11)</a>-->
+<!--    <a href="/" style="font-size: 15px;color: yellow">剑指Offer(3)</a>-->
+</div>
+@}
 <div id="aplayer"></div>
 <div style="padding-top: 20px;padding-bottom:10px;clear: both">
     <center>公开博客 ${user.pub} 篇，非公开博客 ${user.pro} 篇，Since 2017-2020，All Right Reserved</center>
@@ -66,5 +77,7 @@
 <script src="${ctxPath}/lib/jquery/jquery.min.js"></script>
 <script src="${ctxPath}/lib/layui/layui.js"></script>
 <script src="${ctxPath}/js/common/HK.js"></script>
+<script src="${ctxPath}/js/wordcloud2.js"></script>
+<script src="${ctxPath}/js/mywordcloud.js"></script>
 <script src="${ctxPath}/aplayer/APlayer.min.js"></script>
 <script src="${ctxPath}/aplayer/myAplayer.js"></script>
