--- a/k-new-blog/eladmin-system/src/main/resources/templates/blog/timeline.html
+++ b/k-new-blog/eladmin-system/src/main/resources/templates/blog/timeline.html
@@ -1,8 +1,8 @@
 @include("/blog/_header.html"){}
 
-<div style="margin-top: 30px;">
-    <center>本页共 ${user.pageTotal} 篇，分为 ${user.dirCount} 个系列展示</center>
-</div>
+<!--<div style="margin-top: 15px;">-->
+<!--    <center>本页共 ${user.pageTotal} 篇，分为 ${user.dirCount} 个系列展示</center>-->
+<!--</div>-->
 
 <div class="layui-main main-container" id="main-blog">
     @if (isNotEmpty(lists) && isNotEmpty(titles)) {
