--- a/k-new-blog/eladmin-system/src/main/resources/templates/blog/blog.html
+++ b/k-new-blog/eladmin-system/src/main/resources/templates/blog/blog.html
@@ -7,7 +7,7 @@
             <span class="next-blog"><a href='${ctxPath}${user.blog.nextBlog!"#"}'>下一篇:${user.blog.nextBlogTitle!"本系列完"}</a></span>
         </div>
         <div class="panel-body">
-            <p id="countChars" style="font-size: 14px;color: #777777;">${user.blog.characterCount}</p>
+            <p id="countChars" style="font-size: 14px;color: #777777;">${user.blog.characterCount} ${user.blog.blogDate}</p>
             @printFile("blog:" + user.blog.filePath + ".html");
             @if(isNotEmpty(user.blog.blogDate) && isNotEmpty(user.blog.updateTime)) {
             <blockquote>
@@ -21,7 +21,7 @@
             <blockquote>
                 <small>
                     总访问次数:${user.blog.viewCount!"1"}，${user.name} 创建于
-                    ${user.blog.createTime}
+                    ${user.blog.blogDate}
                 </small>
             </blockquote>
             @}
