完善web静态cdn资源

--- a/k-new-blog/eladmin-system/src/main/resources/templates/blog/_common_nav.html
+++ b/k-new-blog/eladmin-system/src/main/resources/templates/blog/_common_nav.html
@@ -70,10 +70,14 @@
     <center>公开博客 ${user.pub} 篇，非公开博客 ${user.pro} 篇，Since 2017-2020，All Right Reserved</center>
     <center><a href="http://www.beian.miit.gov.cn">湘ICP备17005816号</a></center>
 </div>
-<script src="${ctxPath}/lib/jquery/jquery.min.js"></script>
-<script src="${ctxPath}/lib/layui/layui.js"></script>
+<!--<script src="${ctxPath}/lib/jquery/jquery.min.js"></script>-->
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!--<script src="${ctxPath}/lib/layui/layui.js"></script>-->
+<script src="https://cdn.bootcdn.net/ajax/libs/layui/2.5.6/layui.all.min.js"></script>
 <script src="${ctxPath}/js/common/HK.js"></script>
-<script src="${ctxPath}/js/wordcloud2.js"></script>
+<!--<script src="${ctxPath}/js/wordcloud2.js"></script>-->
+<script src="https://cdn.bootcdn.net/ajax/libs/wordcloud2.js/1.1.2/wordcloud2.min.js"></script>
 <script src="${ctxPath}/js/mywordcloud.js"></script>
-<script src="${ctxPath}/aplayer/APlayer.min.js"></script>
+<!--<script src="${ctxPath}/aplayer/APlayer.min.js"></script>-->
+<script src="https://cdn.bootcdn.net/ajax/libs/aplayer/1.9.1/APlayer.min.js"></script>
 <script src="${ctxPath}/aplayer/myAplayer.js"></script>
