--- a/k-new-blog/eladmin-system/src/main/resources/templates/blog/_header.html
+++ b/k-new-blog/eladmin-system/src/main/resources/templates/blog/_header.html
@@ -4,11 +4,14 @@
     <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>${title!"小葵博客"}</title>
-    <link href="${ctxPath}/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="${ctxPath}/lib/layui/css/layui.css" rel="stylesheet"/>
+<!--    <link href="${ctxPath}/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>-->
+    <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.4.0/css/bootstrap.min.css" rel="stylesheet">
+    <!--    <link href="${ctxPath}/lib/layui/css/layui.css" rel="stylesheet"/>-->
+    <link rel="stylesheet" type="text/css" href="https://www.layuicdn.com/layui/css/layui.css" />
     <link href="${ctxPath}/css/blog.css" rel="stylesheet"/>
     <link href="${ctxPath}/css/typora.css" rel="stylesheet"/>
-    <link href="${ctxPath}/aplayer/APlayer.min.css" rel="stylesheet"/>
+<!--    <link href="${ctxPath}/aplayer/APlayer.min.css" rel="stylesheet"/>-->
+    <link href="https://cdn.bootcdn.net/ajax/libs/aplayer/1.9.1/APlayer.min.css" rel="stylesheet">
     <link href="${ctxPath}/css/rainbow.css" rel="stylesheet"/>
     <style>
         .main-container {
