--- a/k-new-blog/eladmin-system/src/main/resources/templates/blog/blog.html
+++ b/k-new-blog/eladmin-system/src/main/resources/templates/blog/blog.html
@@ -31,11 +31,14 @@
 <div id="right-nav">
     <ul></ul>
 </div>
-<script src="${ctxPath}/lib/jquery/jquery.min.js"></script>
-<script src="${ctxPath}/lib/layui/layui.js"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/layui/2.5.6/layui.all.min.js"></script>
+<!--<script src="${ctxPath}/lib/jquery/jquery.min.js"></script>-->
+<!--<script src="${ctxPath}/lib/layui/layui.js"></script>-->
 <script src="${ctxPath}/js/common/HK.js"></script>
 <script src="${ctxPath}/js/blog.js"></script>
-<script src="${ctxPath}/js/highlight.pack.js"></script>
+<!--<script src="${ctxPath}/js/highlight.pack.js"></script>-->
+<script src="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.6.0/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 <script>
 $(function(){
