完善读写分离示例

--- a/k-new-blog/eladmin-system/src/main/resources/templates/blog/_common_nav.html
+++ b/k-new-blog/eladmin-system/src/main/resources/templates/blog/_common_nav.html
@@ -78,6 +78,6 @@
 <!--<script src="${ctxPath}/js/wordcloud2.js"></script>-->
 <script src="https://cdn.bootcdn.net/ajax/libs/wordcloud2.js/1.1.2/wordcloud2.min.js"></script>
 <script src="${ctxPath}/js/mywordcloud.js"></script>
-<!--<script src="${ctxPath}/aplayer/APlayer.min.js"></script>-->
-<script src="https://cdn.bootcdn.net/ajax/libs/aplayer/1.9.1/APlayer.min.js"></script>
+<script src="${ctxPath}/aplayer/APlayer.min.js"></script>
+<!--<script src="https://cdn.bootcdn.net/ajax/libs/aplayer/1.9.1/APlayer.min.js"></script>-->
 <script src="${ctxPath}/aplayer/myAplayer.js"></script>
