--- a/k-new-blog/eladmin-system/src/main/resources/templates/blog/_header.html
+++ b/k-new-blog/eladmin-system/src/main/resources/templates/blog/_header.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" type="text/css" href="https://www.layuicdn.com/layui/css/layui.css" />
     <link href="${ctxPath}/css/blog.css" rel="stylesheet"/>
     <link href="${ctxPath}/css/typora.css" rel="stylesheet"/>
-<!--    <link href="${ctxPath}/aplayer/APlayer.min.css" rel="stylesheet"/>-->
-    <link href="https://cdn.bootcdn.net/ajax/libs/aplayer/1.9.1/APlayer.min.css" rel="stylesheet">
+    <link href="${ctxPath}/aplayer/APlayer.min.css" rel="stylesheet"/>
+<!--    <link href="https://cdn.bootcdn.net/ajax/libs/aplayer/1.9.1/APlayer.min.css" rel="stylesheet">-->
     <link href="${ctxPath}/css/rainbow.css" rel="stylesheet"/>
     <style>
         .main-container {
